; ModuleID = '/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_lodepng_zlib_decompress.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_lodepng_zlib_decompress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lodepng_zlib_decompress(i8** %0, i64* %1, i8* %2, i64 %3, %struct.TYPE_4__* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.TYPE_4__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i8** %0, i8*** %7, align 8
  store i64* %1, i64** %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store %struct.TYPE_4__* %4, %struct.TYPE_4__** %11, align 8
  store i32 0, i32* %12, align 4
  %18 = load i64, i64* %10, align 8
  %19 = icmp ult i64 %18, 2
  br i1 %19, label %20, label %21

20:                                               ; preds = %5
  store i32 53, i32* %6, align 4
  br label %99

21:                                               ; preds = %5
  %22 = load i8*, i8** %9, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 0
  %24 = load i8, i8* %23, align 1
  %25 = zext i8 %24 to i32
  %26 = mul nsw i32 %25, 256
  %27 = load i8*, i8** %9, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 1
  %29 = load i8, i8* %28, align 1
  %30 = zext i8 %29 to i32
  %31 = add nsw i32 %26, %30
  %32 = srem i32 %31, 31
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %21
  store i32 24, i32* %6, align 4
  br label %99

35:                                               ; preds = %21
  %36 = load i8*, i8** %9, align 8
  %37 = getelementptr inbounds i8, i8* %36, i64 0
  %38 = load i8, i8* %37, align 1
  %39 = zext i8 %38 to i32
  %40 = and i32 %39, 15
  store i32 %40, i32* %13, align 4
  %41 = load i8*, i8** %9, align 8
  %42 = getelementptr inbounds i8, i8* %41, i64 0
  %43 = load i8, i8* %42, align 1
  %44 = zext i8 %43 to i32
  %45 = ashr i32 %44, 4
  %46 = and i32 %45, 15
  store i32 %46, i32* %14, align 4
  %47 = load i8*, i8** %9, align 8
  %48 = getelementptr inbounds i8, i8* %47, i64 1
  %49 = load i8, i8* %48, align 1
  %50 = zext i8 %49 to i32
  %51 = ashr i32 %50, 5
  %52 = and i32 %51, 1
  store i32 %52, i32* %15, align 4
  %53 = load i32, i32* %13, align 4
  %54 = icmp ne i32 %53, 8
  br i1 %54, label %58, label %55

55:                                               ; preds = %35
  %56 = load i32, i32* %14, align 4
  %57 = icmp ugt i32 %56, 7
  br i1 %57, label %58, label %59

58:                                               ; preds = %55, %35
  store i32 25, i32* %6, align 4
  br label %99

59:                                               ; preds = %55
  %60 = load i32, i32* %15, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %63

62:                                               ; preds = %59
  store i32 26, i32* %6, align 4
  br label %99

63:                                               ; preds = %59
  %64 = load i8**, i8*** %7, align 8
  %65 = load i64*, i64** %8, align 8
  %66 = load i8*, i8** %9, align 8
  %67 = getelementptr inbounds i8, i8* %66, i64 2
  %68 = load i64, i64* %10, align 8
  %69 = sub i64 %68, 2
  %70 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %71 = call i32 @inflate(i8** %64, i64* %65, i8* %67, i64 %69, %struct.TYPE_4__* %70)
  store i32 %71, i32* %12, align 4
  %72 = load i32, i32* %12, align 4
  %73 = icmp ne i32 %72, 0
  br i1 %73, label %74, label %76

74:                                               ; preds = %63
  %75 = load i32, i32* %12, align 4
  store i32 %75, i32* %6, align 4
  br label %99

76:                                               ; preds = %63
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %78 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %77, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = icmp ne i32 %79, 0
  br i1 %80, label %98, label %81

81:                                               ; preds = %76
  %82 = load i8*, i8** %9, align 8
  %83 = load i64, i64* %10, align 8
  %84 = sub i64 %83, 4
  %85 = getelementptr inbounds i8, i8* %82, i64 %84
  %86 = call i32 @lodepng_read32bitInt(i8* %85)
  store i32 %86, i32* %16, align 4
  %87 = load i8**, i8*** %7, align 8
  %88 = load i8*, i8** %87, align 8
  %89 = load i64*, i64** %8, align 8
  %90 = load i64, i64* %89, align 8
  %91 = trunc i64 %90 to i32
  %92 = call i32 @adler32(i8* %88, i32 %91)
  store i32 %92, i32* %17, align 4
  %93 = load i32, i32* %17, align 4
  %94 = load i32, i32* %16, align 4
  %95 = icmp ne i32 %93, %94
  br i1 %95, label %96, label %97

96:                                               ; preds = %81
  store i32 58, i32* %6, align 4
  br label %99

97:                                               ; preds = %81
  br label %98

98:                                               ; preds = %97, %76
  store i32 0, i32* %6, align 4
  br label %99

99:                                               ; preds = %98, %96, %74, %62, %58, %34, %20
  %100 = load i32, i32* %6, align 4
  ret i32 %100
}

declare dso_local i32 @inflate(i8**, i64*, i8*, i64, %struct.TYPE_4__*) #1

declare dso_local i32 @lodepng_read32bitInt(i8*) #1

declare dso_local i32 @adler32(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
